# TAI-Project

./: Astar_snake.py  DeepQLearningModel.py  DeepQlearningAgent.py  DeepQlearningTrainer.py  DeepQplot.py  Model.py  QLearningAgent  QLearningAgent.py  QLearningTrainer.py  Qplot.py  README.md  agent.py  dna.py  game.py  gameModule.py  genetic_snake.py  helpers.py  main.py  model.py  pyproject.toml  snakeTrainer.py  train.py
a_star/: Astar_snake.py
deep_q_learning/: DeepQlearningAgent.py
deep_q_learning/model/: stateDict31.pth  stateDict32.pth  stateDict33.pth  stateDict34.pth  stateDict35.pth  stateDict36.pth  stateDict37.pth  stateDict38.pth  stateDict39.pth  stateDict40.pth  stateDict41.pth  stateDict42.pth  stateDict43.pth  stateDict44.pth  stateDict45.pth  stateDict46.pth  stateDict47.pth  stateDict48.pth  stateDict49.pth  stateDict50.pth  stateDict51.pth  stateDict52.pth
deep_q_learning/models/: state_dict51.pth  state_dict52.pth
deep_q_learning_models/: 51.pth  52.pth  53.pth  54.pth  57.pth  58.pth  60.pth
genetic/: genetic_snake.py
genetic/weights/: 2.snake
model/: model.pth
q_learning/: QLearningAgent.py  QLearningTrainer.py
q_learning/q_tables/: 14.npy  57.npy  60.npy  73.npy
q_learning_q_tables/: 4.npy  62.npy  64.npy  66.npy
q_tables/: 327725.npy  60.npy  62.npy  64.npy  67.npy  69.npy  75.npy  88662.npy
weights/: 1.snake  3.snake
