[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Ken <ken@kenh.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
pygame = ">=2"
numpy = ">=1.19"
torch = "^2.0.1"
matplotlib = "^3.7.1"
ipython = "^8.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"